# iqana-demo

./: .clinerules  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  Dockerfile  Justfile  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.deploy.txt
.devcontainer/: devcontainer.json
.github/workflows/: main.yml  on-release-main.yml  python.yml  terraform.yml  web.yml
apps/web/: .env.development  .env.development.example  .env.production  index.html  package-lock.json  package.json
apps/web/src/: App.tsx  index.css  main.tsx  types.ts
apps/web/src/api/: client.ts
apps/web/src/auth/: auth.ts  pkce.ts
apps/web/src/components/: Badge.tsx  HoldingsTable.tsx
docs/: backend.md  cost_rel_monitoring.md  framework_decisions.md  frontend.md  index.md  infra.md  modules.md  project_structure.md
infra/envs/dev/: backend.hcl  main.tf  providers.tf  versions.tf
infra/modules/cognito-jwt/: main.tf  outputs.tf  variables.tf
infra/modules/frontend/: main.tf  outputs.tf  variables.tf
iqana_demo/adapters/: coinbase_client.py
iqana_demo/api/: app.py
iqana_demo/core/: models.py  settings.py
iqana_demo/storage/: ddb.py
scripts/deploy/: build_zip.sh  build_zip_docker.sh
scripts/lambda/: build.sh
scripts/tf/: bootstrap.sh  remote_state.sh
tests/: test_foo.py  test_health.py
