[project]
name = "iqana-demo"
version = "0.0.1"
description = "This is a demo repo for the Iqana interview process task."
authors = [
  { name = "Xhulio Skenderi", email = "skenderixhulio@gmail.com" },
]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.10,<4.0"
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "boto3>=1.40.55",
    "fastapi>=0.119.0",
    "httpx>=0.28.1",
    "mangum>=0.19.0",
    "mypy-boto3-dynamodb>=1.40.44",
    "pydantic>=2",
    "uvicorn[standard]>=0.38.0",
]

[project.urls]
Homepage = "https://kiluas.github.io/iqana-demo/"
Repository = "https://github.com/kiluas/iqana-demo"
Documentation = "https://kiluas.github.io/iqana-demo/"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pre-commit>=4.1.0",
    "tox-uv>=1.25.0",
    "deptry>=0.23.0",
    "mypy>=1.15.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.10",
    "mkdocs>=1.4.2",
    "mkdocs-material>=9.6.7",
    "mkdocs-github-admonitions-plugin>=0.0.3",
    "mkdocstrings[python]>=0.29.0",
    "boto3-stubs[dynamodb,secretsmanager]>=1.40.55",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["iqana_demo*"]
where = ["."]

[tool.mypy]
files = ["iqana_demo"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
  # flake8-2020
  "YTT",
  # flake8-bandit
  "S",
  # flake8-bugbear
  "B",
  # flake8-builtins
  "A",
  # flake8-comprehensions
  "C4",
  # flake8-debugger
  "T10",
  # flake8-simplify
  "SIM",
  # isort
  "I",
  # mccabe
  "C90",
  # pycodestyle
  "E",
  "W",
  # pyflakes
  "F",
  # pygrep-hooks
  "PGH",
  # pyupgrade
  "UP",
  # ruff
  "RUF",
  # tryceratops
  "TRY",
  # Pylint-equivalent rules
  "PLC",
  "PLE",
  "PLR",
  "PLW",
]
ignore = [
  # LineTooLong
  "E501",
  # DoNotAssignLambda
  "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]


preview = true
[tool.coverage.report]
skip_empty = true

[tool.coverage.run]


branch = true
source = ["iqana_demo"]
